连接的启动，停止，以及状态显示
