# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0 版本"
     },
-    "basePath": "/api/",
+    "basePath": "/api/modbus/api/",
     "paths": {
         "/client/count": {
             "post": {
@@ -360,9 +360,9 @@
                 }
             }
         },
-        "/config/db": {
+        "/client/{id}/start": {
             "get": {
-                "description": "查询数据库配置",
+                "description": "启动客户端",
                 "consumes": [
                     "application/json"
                 ],
@@ -370,54 +370,31 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config"
+                    "client"
                 ],
-                "summary": "查询数据库配置",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-api_dbOptions"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "修改数据库配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "修改数据库配置",
+                "summary": "启动客户端",
                 "parameters": [
                     {
-                        "description": "数据库配置",
-                        "name": "cfg",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.dbOptions"
-                        }
+                        "type": "integer",
+                        "description": "客户端ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int"
+                            "$ref": "#/definitions/api.ReplyData-types_Client"
                         }
                     }
                 }
             }
         },
-        "/config/log": {
+        "/client/{id}/stop": {
             "get": {
-                "description": "查询日志配置",
+                "description": "停止客户端",
                 "consumes": [
                     "application/json"
                 ],
@@ -425,156 +402,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "config"
+                    "client"
                 ],
-                "summary": "查询日志配置",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-api_logOptions"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "修改日志配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "修改日志配置",
+                "summary": "停止客户端",
                 "parameters": [
                     {
-                        "description": "日志配置",
-                        "name": "cfg",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.logOptions"
-                        }
+                        "type": "integer",
+                        "description": "客户端ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int"
-                        }
-                    }
-                }
-            }
-        },
-        "/config/mqtt": {
-            "get": {
-                "description": "查询MQTT配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "查询MQTT配置",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-api_mqttOptions"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "修改MQTT配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "修改MQTT配置",
-                "parameters": [
-                    {
-                        "description": "MQTT配置",
-                        "name": "cfg",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.mqttOptions"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int"
-                        }
-                    }
-                }
-            }
-        },
-        "/config/web": {
-            "get": {
-                "description": "查询WEB配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "查询WEB配置",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-api_webOptions"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "修改WEB配置",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "修改WEB配置",
-                "parameters": [
-                    {
-                        "description": "WEB配置",
-                        "name": "cfg",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.webOptions"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.ReplyData-int"
+                            "$ref": "#/definitions/api.ReplyData-types_Client"
                         }
                     }
                 }
@@ -1231,6 +1075,38 @@
                     "link"
                 ],
                 "summary": "启用连接",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "连接ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ReplyData-types_Link"
+                        }
+                    }
+                }
+            }
+        },
+        "/link/{id}/stop": {
+            "get": {
+                "description": "停止连接",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "link"
+                ],
+                "summary": "停止连接",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1910,6 +1786,70 @@
                 }
             }
         },
+        "/serial/{id}/start": {
+            "get": {
+                "description": "启动串口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "serial"
+                ],
+                "summary": "启动串口",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "串口ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ReplyData-types_Serial"
+                        }
+                    }
+                }
+            }
+        },
+        "/serial/{id}/stop": {
+            "get": {
+                "description": "停止串口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "serial"
+                ],
+                "summary": "停止串口",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "串口ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ReplyData-types_Serial"
+                        }
+                    }
+                }
+            }
+        },
         "/server/count": {
             "post": {
                 "description": "查询服务器数量",
@@ -2261,6 +2201,70 @@
                     }
                 }
             }
+        },
+        "/server/{id}/start": {
+            "get": {
+                "description": "启动服务端",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "server"
+                ],
+                "summary": "启动服务端",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "服务端ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ReplyData-types_Server"
+                        }
+                    }
+                }
+            }
+        },
+        "/server/{id}/stop": {
+            "get": {
+                "description": "停止服务端",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "server"
+                ],
+                "summary": "停止服务端",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "服务端ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.ReplyData-types_Server"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -2288,61 +2292,6 @@
                     "additionalProperties": {
                         "type": "integer"
                     }
-                }
-            }
-        },
-        "api.ReplyData-api_dbOptions": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/api.dbOptions"
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.ReplyData-api_logOptions": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/api.logOptions"
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.ReplyData-api_mqttOptions": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/api.mqttOptions"
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.ReplyData-api_webOptions": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/api.webOptions"
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.ReplyData-int": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "integer"
-                },
-                "error": {
-                    "type": "string"
                 }
             }
         },
@@ -2533,94 +2482,6 @@
                 },
                 "total": {
                     "type": "integer"
-                }
-            }
-        },
-        "api.dbOptions": {
-            "type": "object",
-            "properties": {
-                "debug": {
-                    "type": "boolean"
-                },
-                "log_level": {
-                    "type": "integer"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.logOptions": {
-            "type": "object",
-            "properties": {
-                "caller": {
-                    "type": "boolean"
-                },
-                "format": {
-                    "type": "string"
-                },
-                "level": {
-                    "type": "string"
-                },
-                "output": {
-                    "$ref": "#/definitions/api.logOutput"
-                },
-                "text": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "api.logOutput": {
-            "type": "object",
-            "properties": {
-                "filename": {
-                    "type": "string"
-                },
-                "max_age": {
-                    "type": "integer"
-                },
-                "max_backups": {
-                    "type": "integer"
-                },
-                "max_size": {
-                    "type": "integer"
-                }
-            }
-        },
-        "api.mqttOptions": {
-            "type": "object",
-            "properties": {
-                "clientId": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.webOptions": {
-            "type": "object",
-            "properties": {
-                "addr": {
-                    "type": "string"
-                },
-                "cors": {
-                    "type": "boolean"
-                },
-                "debug": {
-                    "type": "boolean"
-                },
-                "gzip": {
-                    "type": "boolean"
                 }
             }
         },
@@ -2827,6 +2688,10 @@
                 "be": {
                     "description": "大端模式",
                     "type": "boolean"
+                },
+                "bits": {
+                    "description": "位，1 2 3...",
+                    "type": "integer"
                 },
                 "name": {
                     "description": "名称",
